fixing the right side spacing

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -63,8 +63,7 @@ img.Rphoto {
   width: 100%;
 }
 #wrapper-inner {
-  padding: 15px 3px 30px 17px;
-  width: 98%;
+  padding: 15px 15px 30px 17px;
   float: left;
 }
 #masthead h1 a {
